--- a/css/estilo.css
+++ b/css/estilo.css
@@ -56,3 +56,17 @@
 #pagethree #signin a.ui-link{
 	color:#305F8B;
 }
+#abre_panel{
+  position: absolute;
+  background-image:url('../res/images/menu_btn.png');
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 20px;
+  box-shadow: none;
+  background-color: transparent !important;
+  border: none;
+  left: -5px;
+  top: 0;
+  margin-top: 6px !important;
+  text-indent:-9999px;
+}
